Fixed bidder search CSS to display none important to ensure that bidders not matched in search are not visible

--- a/style/rp_tool.css
+++ b/style/rp_tool.css
@@ -487,7 +487,7 @@ input:checked + .switch_value:before{
 }
 
 .menu_item_select_bid-check.hidden{
-	display:none;
+	display:none !important;
 }
 
 .menu_item_select_modules-check input,.menu_item_select_bid-check input  ,.menu_item_select_analytics-check input{
